[package]
name = "RustWebServer" #aka Refera
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
urlencoding = "2.1.3"
ctrlc = "3.4.2"
libc = "0.2.149"
once_cell = "1.19.0"
threadpool = "1.8.1"
futures = { version = "0.3.30", features = ["thread-pool"] }